[package]
name = "genrc"
version = "0.2.1"
edition = "2021"
description = "refcounted pointer type that allows subobject pointers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jpetkau/genrc"
categories = ["algorithms", "rust-patterns"]
keywords = ["arc", "rc", "shared_ptr", "projected", "zerocopy"]

[features]
allocator_api = ["bumpalo/allocator_api"]

[dev-dependencies]
bumpalo = { version = "3.13" }

[package.metadata.docs.rs]
all-features = true
